--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "rimraf dist && webpack -p --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "element-ui": "^2.3.4",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-axios": "^3.2.2",
+    "vue-router": "^3.4.9"
   },
   "engines": {
     "node": ">=6"
