--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-ui": "^2.15.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.3",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
